--- a/onlyflans/web/templates/index.html
+++ b/onlyflans/web/templates/index.html
@@ -2,8 +2,6 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-
 <section id="highlight" class=" d-flex justify-content-center align-items-center">
     <div class="w-75 align-items-center container pb-5">
         <h2 class="container mt-2 text-center">Nuestros Deliciosos Productos</h2>
@@ -15,8 +13,7 @@
                     <img class="card-img-top" src="{% static 'img/flan1.jpg' %}" alt="Card image cap">
                     <div class="card-body">
                         <h5>$3000</h5>
-                        <p class="card-text">Flan suave y cremoso, con caramelo y fresa fresca.
-El postre perfecto para cualquier ocasión.</p>
+                        <p class="card-text">Flan suave y cremoso, con caramelo y fresa fresca. El postre perfecto para cualquier ocasión.</p>
                     </div>
                 </div>
             </div>
@@ -54,52 +51,8 @@ El postre perfecto para cualquier ocasión.</p>
                 </div>
             </div>
         </div>
-        <div class="row g-4">
-            <div class="col-xl-3 col-md-6 col-sm-12">
-                <div class="card mt-3">
-                    {% load static %}
-                    <img class="card-img-top" src="{% static 'img/flan5.jpg' %}" alt="Card image cap">
-                    <div class="card-body">
-                        <h5>$3800</h5>
-                        <p class="card-text">Flan suave y cremoso, con caramelo y fresa fresca.
-El postre perfecto para cualquier ocasión.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-3 col-md-6 col-sm-12">
-                <div class="card mt-3">
-                    {% load static %}
-                    <img class="card-img-top" src="{% static 'img/flan6.jpg' %}" alt="Card image cap">
-                    <div class="card-body">
-                        <h5>$6000</h5>
-                        <p class="card-text">Flan suave y cremoso, con caramelo y fresa fresca.
-El postre perfecto para cualquier ocasión.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-3 col-md-6 col-sm-12">
-                <div class="card mt-3">
-                    {% load static %}
-                    <img class="card-img-top" src="{% static 'img/flan7.jpg' %}" alt="Card image cap">
-                    <div class="card-body">
-                        <h5>4500</h5>
-                        <p class="card-text">Flan suave y cremoso, con caramelo y fresa fresca.
-El postre perfecto para cualquier ocasión.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-3 col-md-6 col-sm-12">
-                <div class="card mt-3">
-                    {% load static %}
-                    <img class="card-img-top" src="{% static 'img/flan8.jpg' %}" alt="Card image cap">
-                    <div class="card-body">
-                        <h5>$4000</h5>
-                        <p class="card-text">Flan suave y cremoso, con caramelo y fresa fresca.
-El postre perfecto para cualquier ocasión.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+
     </div>
+    
 </section>
 {% endblock %}
