--- a/onlyflans/web/templates/index.html
+++ b/onlyflans/web/templates/index.html
@@ -6,17 +6,21 @@
     <div class="w-75 align-items-center container pb-5">
         <h2 class="container mt-2 text-center">Nuestros Deliciosos Productos</h2>
         <hr>
+        
         <div class="row g-4">
+            {% for flan in flanes%}
             <div class="col-xl-3 col-md-6 col-sm-12">
                 <div class="card mt-3">
                     {% load static %}
-                    <img class="card-img-top" src="{% static 'img/flan1.jpg' %}" alt="Card image cap">
+                    <img class="card-img-top" src={{flan.img_url}}  alt="Card image cap">
                     <div class="card-body">
-                        <h5>$3000</h5>
-                        <p class="card-text">Flan suave y cremoso, con caramelo y fresa fresca. El postre perfecto para cualquier ocasión.</p>
+                        <h4>{{flan.name}}</h4>
+                        <h5>{{flan.precio}}</h5>
+                        <p class="card-text">{{flan.description}}</p>
                     </div>
                 </div>
             </div>
+            {% endfor %}
             <div class="col-xl-3 col-md-6 col-sm-12">
                 <div class="card mt-3">
                     {% load static %}
