--- a/onlyflans/web/templates/header.html
+++ b/onlyflans/web/templates/header.html
@@ -19,7 +19,10 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="acerca">Acerca</a>
-                  </li>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contacto">Contacto</a>
+              </li>
               </ul>
             </div>
           </nav>
