--- a/onlyflans/web/templates/header.html
+++ b/onlyflans/web/templates/header.html
@@ -1,31 +1,46 @@
 
 <header>
-
-<div class="row">
+<div id="div_nav_header" class="container top-0 start-0">
+  <div class="row">
     <div class="col-6 p2 d-flex p-2">
-        <img class="m-2" id="logo_viajes_chile"src="./assets/img/viajes.svg" alt="logo">
-        <p id="p_viajes_chile" class="m-2">Only Flans</p>
+        <img class="m-2" id="only_flan_logo"src="/static/img/flan.png" alt="logo">
+        <h2 id="p_viajes_chile" class="m-2">Only Flans</h2>
     </div>
     <div class="col-6 mt-3 ">
-        <nav id="nav_bar" class="navbar navbar-expand-sm navbar-light  position-absolute end-0">
+        <nav id="nav_bar" class="navbar navbar-expand-lg navbar-light  position-absolute end-0">
   
             <div class="container-fluid">
               <ul class="navbar-nav">
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/">Inicio</a>
                 </li>
+                {%if user.is_authenticated%}
                 <li class="nav-item">
-                  <a id="a_who" class="nav-link" href="bienvenido">Bienvenido</a>
+                  <a id="a_who" class="nav-link" href="/bienvenido">Bienvenido</a>
+                </li>
+                {%endif%}
+                <li class="nav-item">
+                    <a class="nav-link" href="/acerca">Acerca</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="acerca">Acerca</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contacto">Contacto</a>
+                  <a class="nav-link" href="/contacto">Contacto</a>
               </li>
+              {%if user.is_authenticated%}
+              <a href="/logout" class="nav-link" >
+                  Logout
+              </a>
+              {%else%}
+                  <a href="/login"  class="nav-link" >
+                      Login
+                  </a>
+                  <a href="/signup" class="nav-link">
+                      Signup
+                  </a>
+              {%endif%}
               </ul>
             </div>
           </nav>
     </div>
   </div>
+</div>
 </header>
